Fixed a bug where the header would break on iphone 5

--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -23,7 +23,6 @@
 }
 
 .header__label {
-  padding: 1em;
   cursor: pointer;
   transition: padding 300ms ease;
 }
